--- a/test.html
+++ b/test.html
@@ -7,17 +7,31 @@
                 font-size: 28px;
                 font-family: 'Nunito', sans-serif;
                 opacity: 0;
-                animation: fadein 1s;
-                animation-delay: 0.4s;
+                animation: fadein 0.8s;
+                animation-delay: 0.8s;
                 animation-fill-mode: forwards;
+            }
+            .fade-out {
+                animation: fadeout 0.8s;
+                animation-delay: 0s;
             }
 
             @keyframes fadein {
                 from { opacity: 0; }
                 to   { opacity: 1; }
             }
+
+            @keyframes fadeout {
+                from { opacity: 1; }
+                to   { opacity: 0; }
+            }
         </style>
         <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <script>
+            function FadeOut() {
+                document.getElementsByTagName("body")[0].classList.add("fade-out");
+            }
+        </script>
     </head>
     <body>
         <p>
