--- a/test.html
+++ b/test.html
@@ -11,6 +11,9 @@
                 animation-delay: 0.2s;
                 animation-fill-mode: forwards;
             }
+            #body::-webkit-scrollbar {
+                display: none;
+            }
             .fade-out {
                 animation: fadeout 0.2s;
                 animation-delay: 0s;
