--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
-<html>
+ <html>
     <head>
         <style>
             body {
-                background: black;
+                background: none;
                 color: white;
                 font-size: 2vw;
                 font-family: 'Nunito', sans-serif;
