--- a/test.html
+++ b/test.html
@@ -53,6 +53,9 @@
             <div style="width: 50%;">
                 <div style="padding: 4vw;">
                     <p class="h1 light" style="margin-top: 4vw; margin-bottom: 4vw;">Tira</p>
+                    <iframe id="ytplayer" type="text/html" width="640" height="360"
+  src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&origin=http://example.com"
+  frameborder="0"></iframe>
                     <p style="opacity: 0.7;">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tincidunt nisi magna, eget ullamcorper ligula malesuada ut. Duis ac venenatis sem. Aliquam finibus dictum justo, sed accumsan diam pharetra non. Nullam tincidunt libero enim, sed vestibulum metus dapibus a. Quisque tristique turpis tincidunt nisl volutpat dictum. Proin rhoncus viverra pulvinar. Nulla auctor diam massa, eu volutpat mi ultrices id. Sed vulputate sapien leo, eget tincidunt ligula dictum at. Suspendisse potenti. Etiam diam felis, commodo vitae laoreet non, fermentum sed nulla. In vitae pharetra mauris. Donec vitae posuere leo, id bibendum elit. Aenean semper nisi vel dui tincidunt, vitae posuere elit lobortis.
                     </p>
